register api change
